@@ -6,10 +6,9 @@ import com.academy.dtos.tag.TagResponseDTO;
 import com.academy.exceptions.EntityNotFoundException;
 import com.academy.models.Tag;
 import com.academy.models.service.Service;
-import com.academy.repositories.ServiceRepository;
 import com.academy.repositories.TagRepository;
 import jakarta.transaction.Transactional;
-import org.springframework.dao.DataIntegrityViolationException;
+import org.springframework.context.annotation.Lazy;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -19,13 +18,13 @@ import java.util.stream.Collectors;
 public class TagService {
 
     private final TagRepository tagRepository;
-    private final ServiceRepository serviceRepository;
     private final TagMapper tagMapper;
+    private final ServiceService serviceService;
 
-    public TagService(TagRepository tagRepository, ServiceRepository serviceRepository, TagMapper tagMapper) {
-        this.serviceRepository = serviceRepository;
+    public TagService(TagRepository tagRepository, TagMapper tagMapper, @Lazy ServiceService serviceService) {
         this.tagRepository = tagRepository;
         this.tagMapper = tagMapper;
+        this.serviceService = serviceService;
     }
 
     // Create
@@ -33,8 +32,7 @@ public class TagService {
     public TagResponseDTO create(TagRequestDTO dto) {
         Tag tag = tagMapper.toEntity(dto);
 
-        List<Service> services = serviceRepository.findAllById(dto.serviceIds());
-        linkTagsToService(tag, services);
+        linkTagsToService(tag, dto.serviceIds());
 
         Tag savedTag = tagRepository.save(tag);
         return tagMapper.toDto(savedTag);
@@ -42,21 +40,11 @@ public class TagService {
 
     @Transactional
     public TagResponseDTO update(Long id, TagRequestDTO dto) {
-        Tag existing = tagRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException(Tag.class, id));
+        Tag existing = getTagEntityById(id);
 
-        // Remove existing service associations
-        for (Service service : new ArrayList<>(existing.getServices())) {
-            service.getTags().remove(existing);
-        }
-        existing.getServices().clear();
-
-        // Handle associations with services
-        List<Service> newServices = serviceRepository.findAllById(dto.serviceIds());
-        linkTagsToService(existing, newServices);
+        linkTagsToService(existing, dto.serviceIds());
 
         tagMapper.updateEntityFromDto(dto, existing);
-
         return tagMapper.toDto(tagRepository.save(existing));
     }
 
@@ -65,13 +53,12 @@ public class TagService {
         return tagRepository.findAll()
                 .stream()
                 .map(tagMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     // Read one
     public TagResponseDTO getById(Long id) {
-        Tag tag = tagRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException(Tag.class, id));
+        Tag tag = getTagEntityById(id);
 
         return tagMapper.toDto(tag);
     }
@@ -79,8 +66,7 @@ public class TagService {
     // Delete
     @Transactional
     public void delete(Long id) {
-        Tag tag = tagRepository.findById(id)
-                .orElseThrow(() -> new EntityNotFoundException(Tag.class, id));
+        Tag tag = getTagEntityById(id);
 
         removeTagFromAllServices(tag); // Break relationship with services
         tagRepository.delete(tag);
@@ -97,24 +83,8 @@ public class TagService {
         List<String> newTagNames = tagNames.stream()
                 .filter(name -> !existingTagNames.contains(name))
                 .toList();
-
-        // Create new tags for names that don't exist
-        List<Tag> newTags = newTagNames.stream()
-                .map(name -> {
-                    Tag tag = new Tag();
-                    tag.setName(name);
-                    tag.setCustom(true);
-                    return tag;
-                })
-                .toList();
-
-        if (!newTags.isEmpty()) {
-            try {
-                tagRepository.saveAll(newTags); // Try inserting all new tags
-            } catch (DataIntegrityViolationException e) {
-                // Race condition likely occurred: // TODO log
-            }
-        }
+        List<Tag> newTags = createTagsFromNames(newTagNames);
+        tagRepository.saveAll(newTags);
 
         // Combine existing and new tags and return them
         List<Tag> allTags = new ArrayList<>(existingTags);
@@ -122,14 +92,36 @@ public class TagService {
         return allTags;
     }
 
-    @Transactional
-    public void removeTagFromAllServices(Tag tag) {
-        List<Service> services = new ArrayList<>(tag.getServices());
-        tag.removeAllServices();
-        serviceRepository.saveAll(services);
+    public List<Tag> createTagsFromNames(List<String> tagNames) {
+        return tagNames.stream()
+                .map(name -> {
+                    Tag tag = new Tag();
+                    tag.setName(name);
+                    tag.setCustom(true);
+                    return tag;
+                })
+                .toList();
     }
 
-    private void linkTagsToService(Tag tag, List<Service> services) {
+    public Tag getTagEntityById(Long id) {
+        return tagRepository.findById(id).orElseThrow(() -> new EntityNotFoundException(Tag.class, id));
+    }
+
+    public Tag getTagEntityByName(String name) {
+        return tagRepository.findByName(name).orElseThrow(() -> new EntityNotFoundException(Tag.class, " with name " + name + " not found"));
+    }
+
+    private void removeTagFromAllServices(Tag tag) {
+        for (Service service : new ArrayList<>(tag.getServices())) {
+            service.getTags().remove(tag);
+        }
+        tag.getServices().clear();
+    }
+
+    private void linkTagsToService(Tag tag, List<Long> serviceIds) {
+        removeTagFromAllServices(tag);
+
+        List<Service> services = serviceService.getServiceEntitiesByIds(serviceIds);
         tag.setServices(services);
         for (Service service : services) {
             service.getTags().add(tag);
